--- a/BasicFramework/Podfile
+++ b/BasicFramework/Podfile
@@ -3,24 +3,13 @@ platform :ios, ‘7.0’
 target ‘BasicFramework’ do
 
   pod 'MBProgressHUD', '~> 0.9.2'
-#  pod 'Bugly'
+  pod 'Bugly'
   pod 'AFNetworking', '~> 3.1.0'
   pod 'SDWebImage', '~>3.7'
-#  pod 'MJRefresh’
   pod 'Reachability', '~> 3.2'
   pod 'SBJson', '~> 4.0.2'
   pod 'JSONModel', '~> 1.2.0'
   pod 'Masonry', '~> 1.0.1'
   pod 'MyUUID'
-
-##wsl--add
-#<<start>>
-#高德地图api
-#pod 'AMap2DMap', '~> 4.0.0' #2D地图SDK(2D地图和3D地图不能同时使用)
-#pod 'AMapSearch', '~> 4.0.0' #搜索服务SDK
-#pod 'AMapLocation', '~> 2.0.0' #定位sdk
-
-
-#<<end>>
 
 end
